[project]
name = "tennis-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]

[tool.uv.workspace]
members = [
    "yaml",
]